# sysinfo_rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  cliff.toml  deny.toml
src/: lib.rs
src/system_info/: hardware.rs  mod.rs  software.rs
