[package]
name = "sysinfo_rs"
version = "0.1.7"
authors = ["Chen Zongyao <solar1s@163.com>"]
edition = "2021"

description = "A library for retrieving system information."
repository = "https://github.com/chenzongyao200127/sysinfo_rs"
license = "MIT"

[dependencies]
anyhow = "1.0.88"
libc = "0.2"
pnet = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"

[target.'cfg(target_os = "linux")'.dependencies]
libudev-sys = "0.1.4"

[features]
default = []
