[package]
name = "sysinfo_rs"
version = "0.1.8"
authors = ["Chen Zongyao <solar1s@163.com>"]
edition = "2021"

description = "A library for retrieving system information."
repository = "https://github.com/chenzongyao200127/sysinfo_rs"
license = "MIT"

[dependencies]
anyhow = "1.0.88"
nix = { version = "0.29.0", features = ["feature"] }
pnet = "0.35.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
udev = "0.9.1"

[features]
default = []
